fixed layout breaking on loadmore in search page

--- a/stylesheets/search.css
+++ b/stylesheets/search.css
@@ -9,7 +9,7 @@
 
 .search-results figure {
     position:relative;
-    float:left;
+    display:inline-block;
     margin:0;
 }
 
